--- a/package.json
+++ b/package.json
@@ -8,26 +8,29 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "register-service-worker": "^1.5.2",
-    "vue": "^2.5.22",
+    "debug": "^4.1.1",
+    "node-sass": "^4.11.0",
+    "register-service-worker": "^1.6.2",
+    "sass-loader": "^7.1.0",
+    "vue": "^2.6.8",
     "vue-router": "^3.0.1",
-    "vuetify": "^1.3.0"
+    "vuetify": "^1.5.5"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.4.0",
-    "@vue/cli-plugin-eslint": "^3.4.0",
-    "@vue/cli-plugin-pwa": "^3.4.0",
-    "@vue/cli-service": "^3.4.0",
+    "@vue/cli-plugin-babel": "^3.5.0",
+    "@vue/cli-plugin-eslint": "^3.5.0",
+    "@vue/cli-plugin-pwa": "^3.5.0",
+    "@vue/cli-service": "^3.5.0",
     "@vue/eslint-config-airbnb": "^4.0.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint": "^5.15.1",
+    "eslint-plugin-vue": "^5.2.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "vue-cli-plugin-vuetify": "^0.4.6",
-    "vue-template-compiler": "^2.5.21",
-    "vuetify-loader": "^1.0.5"
+    "vue-template-compiler": "^2.6.8",
+    "vuetify-loader": "^1.2.1"
   },
   "eslintConfig": {
     "root": true,
