--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "register-service-worker": "^1.6.2",
     "sass-loader": "^7.1.0",
     "vue": "^2.6.8",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "vuetify": "^1.5.5"
   },
