--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "fix": "vue-cli-service lint --fix"
   },
   "dependencies": {
+    "@vue/cli": "^3.5.1",
     "debug": "^4.1.1",
     "node-sass": "^4.11.0",
     "register-service-worker": "^1.6.2",
